--- a/src/templates/imagesCard.hbs
+++ b/src/templates/imagesCard.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
-<li>
+<li class="gallery-items">
     <div class="images-card">
-        <img src="{{webformatURL}}" alt="{{tags}}" data-src='{{largeImageURL}}'  height="400"  width="400" />
+        <img src="{{webformatURL}}" alt="{{tags}}" data-src='{{largeImageURL}}'  height="500"  width="500" />
 
         <div class="stats">
             <p class="stats-item">
