--- a/src/sass/galleryStles.scss
+++ b/src/sass/galleryStles.scss
@@ -15,6 +15,7 @@ body {
 .search-form {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   display: flex;
 }
 
@@ -30,10 +31,73 @@ input {
   border: 3px solid green;
 }
 
+img {
+  box-shadow: 13px 27px 25px 12px rgba(0, 0, 0, 0.61);
+  -webkit-box-shadow: 13px 27px 25px 12px rgba(0, 0, 0, 0.61);
+  -moz-box-shadow: 13px 27px 25px 12px rgba(0, 0, 0, 0.61);
+}
+
 .button {
   border-radius: 10px;
   width: 150px;
   height: 45px;
   border: 3px solid;
   border: 3px solid green;
+}
+
+.gallery-items {
+  width: calc((100% - 6 * 15px) / 3);
+  margin: 10px;
+}
+
+.gallery {
+  padding: 0;
+  margin: -15px;
+  margin-bottom: 30px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.button.is-hidden {
+  display: none;
+}
+.button > .spinner.is-hidden {
+  display: none;
+}
+.stats {
+  display: flex;
+  margin-left: 80px;
+}
+.stats-item {
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+}
+.material-icons {
+  color: white;
+}
+.gallery img {
+  object-fit: cover;
+  margin-left: 80px;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+  margin-right: 10px;
 }
